--- a/web/packages/web-client/styles/main.scss
+++ b/web/packages/web-client/styles/main.scss
@@ -117,4 +117,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     background-color: $black;
     color: $white;
   }
+  table {
+    border-collapse: collapse
+  }
 }
